--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,8 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^22.3.27",
-    "qrcode": "^1.4.4",
+    "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.12.4"
+    "whatsapp-web.js": "^1.23.0"
   }
 }
